ipcz: Build adaptation for Chromium vs standalone
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Defines the ipcz_source_set() GN template, which for a target "foo"
emits two nearly identical source_sets: "foo_chromium" and
"foo_standalone". The foo_chromium target depends on //base and
can only be generated in Chromium builds. The foo_standalone
target has no Chromium dependencies, but instead defines
IPCZ_STANDALONE and depends on some polyfills for base
functionality defined in ipcz/src/standalone.

This also adds a basic ipcz_source_set("util") for util/log.h
and util/stack_trace.h, for portable equivalents of base/logging.h
and base/debug/stack_trace.h. The util_chromium target uses the
existing //base implementations, while the util_standalone target
uses ipcz polyfill.

A simple compile/smoke test exercises both logging and stack trace
features.

Finally, the Chromium variant of the test suite is linked into the
existing //ipc:ipc_tests target for immediate CI coverage. The
standalone variant is also still compiled after this CL, by virtue
of an existing dependency from //mojo:tests onto ipcz_tests. This
will be left in place only for compile coverage.

Bug: 1299283
Change-Id: I2cf550599cdef44d3e8b280d9fc8066bd163619e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3573141
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#990528}
NOKEYCHECK=True
GitOrigin-RevId: 890225e692243e5c112ad3c08676d411a0b46750

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -5,14 +5,136 @@
 import("//build_overrides/ipcz.gni")
 import("//testing/test.gni")
 
-test("ipcz_tests") {
-  sources = [ "test/run_all_tests.cc" ]
+# This template emits two source_set targets for a target "foo": one named
+# "foo_standalone" for use in standalone ipcz library builds with no Chromium
+# dependencies; and one named "foo_chromium" for integration into the Chromium
+# build, with dependencies on //base.
+#
+# ipcz_source_set targets can express dependencies on each other with the
+# ipcz_deps and ipcz_public_deps variables, which automatically expand to the
+# same variant as the dependent source_set. Apart from this the targets are
+# roughly equivalent to a plain source_set.
+template("ipcz_source_set") {
+  source_set("${target_name}_standalone") {
+    forward_variables_from(invoker,
+                           [
+                             "visibility",
+                             "public",
+                             "sources",
+                             "deps",
+                             "public_deps",
+                             "public_configs",
+                             "testonly",
+                           ])
 
-  deps = [ "//testing/gtest" ]
+    if (defined(invoker.configs)) {
+      configs += invoker.configs
+    }
 
-  if (build_ipcz_standalone) {
+    if (!defined(public_deps)) {
+      public_deps = []
+    }
+    public_deps += [ "${ipcz_src_root}/standalone" ]
+    if (defined(invoker.ipcz_public_deps)) {
+      foreach(dep, invoker.ipcz_public_deps) {
+        public_deps += [ "${dep}_standalone" ]
+      }
+    }
+
+    if (defined(invoker.ipcz_deps)) {
+      if (!defined(deps)) {
+        deps = []
+      }
+      foreach(dep, invoker.ipcz_deps) {
+        deps += [ "${dep}_standalone" ]
+      }
+    }
+
     defines = [ "IPCZ_STANDALONE" ]
   }
+
+  # We can only emit the Chromium variant if we're in the Chromium build.
+  if (!build_ipcz_standalone) {
+    source_set("${target_name}_chromium") {
+      forward_variables_from(invoker,
+                             [
+                               "visibility",
+                               "public",
+                               "sources",
+                               "deps",
+                               "public_deps",
+                               "public_configs",
+                               "testonly",
+                             ])
+
+      if (defined(invoker.configs)) {
+        configs += invoker.configs
+      }
+
+      if (!defined(public_deps)) {
+        public_deps = []
+      }
+      public_deps += [ "//base" ]
+      if (defined(invoker.ipcz_public_deps)) {
+        foreach(dep, invoker.ipcz_public_deps) {
+          public_deps += [ "${dep}_chromium" ]
+        }
+      }
+
+      if (defined(invoker.ipcz_deps)) {
+        if (!defined(deps)) {
+          deps = []
+        }
+        foreach(dep, invoker.ipcz_deps) {
+          deps += [ "${dep}_chromium" ]
+        }
+      }
+    }
+  }
+}
+
+ipcz_source_set("util") {
+  visibility = [ ":*" ]
+
+  public = [
+    "util/log.h",
+    "util/stack_trace.h",
+  ]
+
+  deps = [ "//third_party/abseil-cpp:absl" ]
+  configs = [ ":ipcz_include_src_dir" ]
+}
+
+config("ipcz_include_src_dir") {
+  include_dirs = [ "${ipcz_src_root}" ]
+}
+
+ipcz_source_set("ipcz_tests_sources") {
+  testonly = true
+
+  sources = [ "util/stack_trace_test.cc" ]
+
+  deps = [
+    "//testing/gtest",
+    "//third_party/abseil-cpp:absl",
+  ]
+  ipcz_deps = [ ":util" ]
+
+  configs = [ ":ipcz_include_src_dir" ]
+}
+
+# In Chromium builds, ipcz tests are built into the //ipc:ipc_tests test suite
+# by linking ":ipcz_test_sources_chromium" directly into that target. The
+# standalone ipcz_tests executable is still defined in Chromium builds though so
+# that it gets compile coverage from Chromium infrastructure.
+test("ipcz_tests") {
+  sources = [ "test/run_all_tests.cc" ]
+  deps = [
+    ":ipcz_tests_sources_standalone",
+    "${ipcz_src_root}/standalone",
+    "//testing/gtest",
+  ]
+  configs += [ ":ipcz_include_src_dir" ]
 }
 
 group("all") {
