ipcz: Add RefCounted and Ref<T>
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

These are used extensively by ipcz internals for managing shared object
lifetimes. std::shared_ptr is insufficient since ipcz requires a more
forgiving ownership model for object references.

Bug: 1299283
Change-Id: I7d4cebdfd152de948826004323624ed76aa5cbf9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3572483
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#990576}
NOKEYCHECK=True
GitOrigin-RevId: 4ddeadcafc7ae73bec5da4df4c35c288455e22e5

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -98,8 +98,11 @@ ipcz_source_set("util") {
 
   public = [
     "util/log.h",
+    "util/ref_counted.h",
     "util/stack_trace.h",
   ]
+
+  sources = [ "util/ref_counted.cc" ]
 
   deps = [ "//third_party/abseil-cpp:absl" ]
   configs = [ ":ipcz_include_src_dir" ]
@@ -112,7 +115,10 @@ config("ipcz_include_src_dir") {
 ipcz_source_set("ipcz_tests_sources") {
   testonly = true
 
-  sources = [ "util/stack_trace_test.cc" ]
+  sources = [
+    "util/ref_counted_test.cc",
+    "util/stack_trace_test.cc",
+  ]
 
   deps = [
     "//testing/gtest",
