ipcz: Introduce ipcz.h API and skeleton impl
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

This adds the complete ipcz.h header.

All API functions do nothing and return IPCZ_RESULT_UNIMPLEMENTED. A
basic test is added to cover these calls.

Bug: 1299283
Change-Id: I2bea579efef985056d32e32f3259aa35c0db2113
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3572169
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#991134}
NOKEYCHECK=True
GitOrigin-RevId: f759138bb429ceddaa8e5cd36c42589c32b00a9c

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -5,6 +5,25 @@
 import("//build_overrides/ipcz.gni")
 import("//testing/test.gni")
 
+shared_library("ipcz_shared") {
+  output_name = "ipcz"
+  sources = [ "api.cc" ]
+  deps = [
+    ":ipcz_sources_standalone",
+    "//third_party/abseil-cpp:absl",
+  ]
+  public_deps = [ ":ipcz_header" ]
+  defines = [ "IPCZ_SHARED_LIBRARY" ]
+  public_configs = [ ":ipcz_include_dir" ]
+  configs += [ ":ipcz_include_src_dir" ]
+}
+
+source_set("ipcz_header") {
+  visibility = [ ":*" ]
+  public = [ "../include/ipcz/ipcz.h" ]
+  public_configs = [ ":ipcz_include_dir" ]
+}
+
 # This template emits two source_set targets for a target "foo": one named
 # "foo_standalone" for use in standalone ipcz library builds with no Chromium
 # dependencies; and one named "foo_chromium" for integration into the Chromium
@@ -93,6 +112,15 @@ template("ipcz_source_set") {
   }
 }
 
+ipcz_source_set("ipcz") {
+  sources = [ "api.cc" ]
+  deps = [ "//third_party/abseil-cpp:absl" ]
+  ipcz_deps = [ ":ipcz_sources" ]
+  public_deps = [ ":ipcz_header" ]
+  public_configs = [ ":ipcz_include_dir" ]
+  configs = [ ":ipcz_include_src_dir" ]
+}
+
 ipcz_source_set("util") {
   visibility = [ ":*" ]
 
@@ -108,6 +136,28 @@ ipcz_source_set("util") {
   configs = [ ":ipcz_include_src_dir" ]
 }
 
+ipcz_source_set("impl") {
+  visibility = [ ":*" ]
+  public_deps = [ ":ipcz_header" ]
+  ipcz_public_deps = [ ":util" ]
+  public_configs = [ ":ipcz_include_dir" ]
+  configs = [ ":ipcz_include_src_dir" ]
+}
+
+ipcz_source_set("ipcz_sources") {
+  ipcz_public_deps = [
+    ":impl",
+    ":util",
+  ]
+
+  public_deps = [ ":ipcz_header" ]
+  public_configs = [ ":ipcz_include_dir" ]
+}
+
+config("ipcz_include_dir") {
+  include_dirs = [ "${ipcz_include_root}" ]
+}
+
 config("ipcz_include_src_dir") {
   include_dirs = [ "${ipcz_src_root}" ]
 }
@@ -116,6 +166,9 @@ ipcz_source_set("ipcz_tests_sources") {
   testonly = true
 
   sources = [
+    "api_test.cc",
+    "test/test_base.cc",
+    "test/test_base.h",
     "util/ref_counted_test.cc",
     "util/stack_trace_test.cc",
   ]
@@ -124,7 +177,10 @@ ipcz_source_set("ipcz_tests_sources") {
     "//testing/gtest",
     "//third_party/abseil-cpp:absl",
   ]
-  ipcz_deps = [ ":util" ]
+  ipcz_deps = [
+    ":ipcz",
+    ":util",
+  ]
 
   configs = [ ":ipcz_include_src_dir" ]
 }
