ipcz: Basic node creation
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Implements the CreateNode and Close APIs. CreateNode trivially validates
inputs and returns an opaque handle to a new ref-counted Node object
skeleton.

Also adds a skeleton single-process reference driver which doesn't
really implement anything but does provide a non-null function table;
enough to let CreateNode() succeed.

Bug: 1299283
Change-Id: I4bfb86652d49c938d72f818fb51faac0b4658f69
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3573404
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#992262}
NOKEYCHECK=True
GitOrigin-RevId: f2f5f0ec87ca9d2ce243886613143bea5d410ef5

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -125,6 +125,16 @@ ipcz_source_set("ipcz") {
   configs = [ ":ipcz_include_src_dir" ]
 }
 
+ipcz_source_set("reference_drivers") {
+  sources = [
+    "reference_drivers/single_process_reference_driver.cc",
+    "reference_drivers/single_process_reference_driver.h",
+  ]
+
+  public_deps = [ ":ipcz_header" ]
+  configs = [ ":ipcz_include_src_dir" ]
+}
+
 ipcz_source_set("util") {
   visibility = [ ":*" ]
 
@@ -142,7 +152,20 @@ ipcz_source_set("util") {
 
 ipcz_source_set("impl") {
   visibility = [ ":*" ]
-  public_deps = [ ":ipcz_header" ]
+  public = [
+    "ipcz/api_object.h",
+    "ipcz/node.h",
+  ]
+  sources = [
+    "ipcz/api_object.cc",
+    "ipcz/node.cc",
+    "ipcz/node_name.cc",
+    "ipcz/node_name.h",
+  ]
+  public_deps = [
+    ":ipcz_header",
+    "//third_party/abseil-cpp:absl",
+  ]
   ipcz_public_deps = [ ":util" ]
   public_configs = [ ":ipcz_include_dir" ]
   configs = [ ":ipcz_include_src_dir" ]
@@ -183,6 +206,7 @@ ipcz_source_set("ipcz_tests_sources") {
   ]
   ipcz_deps = [
     ":ipcz",
+    ":reference_drivers",
     ":util",
   ]
 
