ipcz: Introduce SequencedQueue
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Adds a generic SequencedQueue type for retaining a queue of objects
ordered by SequenceNumber. SequenceNumber uses a new StrongAlias type
to provide additional type-safety around the integral value of a
sequence number.

SequencedQueues support efficient accounting and reordering of
elements which may accumulate (push) slightly out-of-order from how they
must be consumed (pop).

Bug: 1299283
Change-Id: If4e8c25fc5a3870c2a96ec8ee10594eb74bb0eae
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3575678
Reviewed-by: Alex Gough <ajgo@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#992271}
NOKEYCHECK=True
GitOrigin-RevId: 7f9fdb77fd267bdd1342189bf8fe65a7ec106a63

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -142,6 +142,7 @@ ipcz_source_set("util") {
     "util/log.h",
     "util/ref_counted.h",
     "util/stack_trace.h",
+    "util/strong_alias.h",
   ]
 
   sources = [ "util/ref_counted.cc" ]
@@ -155,6 +156,8 @@ ipcz_source_set("impl") {
   public = [
     "ipcz/api_object.h",
     "ipcz/node.h",
+    "ipcz/sequence_number.h",
+    "ipcz/sequenced_queue.h",
   ]
   sources = [
     "ipcz/api_object.cc",
@@ -194,6 +197,7 @@ ipcz_source_set("ipcz_tests_sources") {
 
   sources = [
     "api_test.cc",
+    "ipcz/sequenced_queue_test.cc",
     "test/test_base.cc",
     "test/test_base.h",
     "util/ref_counted_test.cc",
@@ -205,6 +209,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "//third_party/abseil-cpp:absl",
   ]
   ipcz_deps = [
+    ":impl",
     ":ipcz",
     ":reference_drivers",
     ":util",
