ipcz: Introduce portals
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Implements a basic OpenPortals() API as well as QueryPortalStatus().

This is mostly boilerplate and plumbing to establish portals as API
objects and to supply baseline skeletons for Router and RouterLink
implementations.

Bug: 1299283
Change-Id: I10334d8ad84a09890b0e9775f843187b206bf59c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3584526
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#993910}
NOKEYCHECK=True
GitOrigin-RevId: a8f0e4bfb59c0c757b5d4ab2eea2b3b642f41385

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -156,14 +156,25 @@ ipcz_source_set("impl") {
   public = [
     "ipcz/api_object.h",
     "ipcz/node.h",
+    "ipcz/portal.h",
+    "ipcz/router.h",
     "ipcz/sequence_number.h",
     "ipcz/sequenced_queue.h",
   ]
   sources = [
     "ipcz/api_object.cc",
+    "ipcz/link_side.cc",
+    "ipcz/link_side.h",
+    "ipcz/link_type.cc",
+    "ipcz/link_type.h",
+    "ipcz/local_router_link.cc",
+    "ipcz/local_router_link.h",
     "ipcz/node.cc",
     "ipcz/node_name.cc",
     "ipcz/node_name.h",
+    "ipcz/portal.cc",
+    "ipcz/router.cc",
+    "ipcz/router_link.h",
   ]
   public_deps = [
     ":ipcz_header",
