ipcz: Implement basic portal I/O
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Implements primitive Put() and Get() APIs on top of portals. Still only
supports portals local to the same node.

Bug: 1299283
Change-Id: Ibacf5eb1170a58c2397f6337dc662223a56d5386
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3587135
Reviewed-by: Alex Gough <ajgo@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#994764}
NOKEYCHECK=True
GitOrigin-RevId: 20695a916e85ae7e1627fb064e115996866f816b

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -156,6 +156,8 @@ ipcz_source_set("impl") {
   public = [
     "ipcz/api_object.h",
     "ipcz/node.h",
+    "ipcz/parcel.h",
+    "ipcz/parcel_queue.h",
     "ipcz/portal.h",
     "ipcz/router.h",
     "ipcz/sequence_number.h",
@@ -172,6 +174,8 @@ ipcz_source_set("impl") {
     "ipcz/node.cc",
     "ipcz/node_name.cc",
     "ipcz/node_name.h",
+    "ipcz/parcel.cc",
+    "ipcz/parcel_queue.cc",
     "ipcz/portal.cc",
     "ipcz/router.cc",
     "ipcz/router_link.h",
@@ -208,6 +212,7 @@ ipcz_source_set("ipcz_tests_sources") {
 
   sources = [
     "api_test.cc",
+    "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "test/test_base.cc",
     "test/test_base.h",
