ipcz: Single-process reference driver, basic tests
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Implements a fully functioning single-process reference driver, and adds
some tests to exercise it.

Note that this driver is ONLY for use in tests and is not intended
for production use in Chromium.

Bug: 1299283
Change-Id: Ibebcb7554d5e56c10c8857128cfb547306a441c7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3591317
Reviewed-by: Alex Gough <ajgo@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#994961}
NOKEYCHECK=True
GitOrigin-RevId: 277452885cf22b9dcc4305a99974fa29bfa4e997

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -126,11 +126,17 @@ ipcz_source_set("ipcz") {
 }
 
 ipcz_source_set("reference_drivers") {
+  public = [ "reference_drivers/single_process_reference_driver.h" ]
+
   sources = [
+    "reference_drivers/object.cc",
+    "reference_drivers/object.h",
+    "reference_drivers/random.cc",
+    "reference_drivers/random.h",
     "reference_drivers/single_process_reference_driver.cc",
-    "reference_drivers/single_process_reference_driver.h",
   ]
 
+  ipcz_deps = [ ":util" ]
   public_deps = [ ":ipcz_header" ]
   configs = [ ":ipcz_include_src_dir" ]
 }
@@ -214,6 +220,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "api_test.cc",
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
+    "reference_drivers/single_process_reference_driver_test.cc",
     "test/test_base.cc",
     "test/test_base.h",
     "util/ref_counted_test.cc",
