ipcz: Implement driver object helpers
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

ipcz utilizes objects created and manipulated via the driver's C ABI.

This introduces a small number of C++ classes (DriverObject,
DriverMemory, DriverMemoryMapping, and DriverTransport) to encapsulate
those objects and help ipcz integrate more legibly with drivers.

These are very thin classes which do little more than pass values
through to drivers and transmute inputs and outputs to look and feel
more object-like. They also serve to manage handle lifetime, with
DriverTransport being a shared refcounted wrapper, and the others being
move-only wrappers.

Most of this CL is testing code: a MockDriver implementation to
introspect driver ABI calls from ipcz, and tests covering each of these
objects' interaction with the driver.

Bug: 1299283
Change-Id: I3a0c2314f822b8c1104f9cb5d2998e6f101c48d7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3598153
Reviewed-by: Alex Gough <ajgo@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#996939}
NOKEYCHECK=True
GitOrigin-RevId: 65ffb6c388c77f8308c8b1ff0022ec2f0878a0a2

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -161,6 +161,10 @@ ipcz_source_set("impl") {
   visibility = [ ":*" ]
   public = [
     "ipcz/api_object.h",
+    "ipcz/driver_memory.h",
+    "ipcz/driver_memory_mapping.h",
+    "ipcz/driver_object.h",
+    "ipcz/driver_transport.h",
     "ipcz/node.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
@@ -171,6 +175,10 @@ ipcz_source_set("impl") {
   ]
   sources = [
     "ipcz/api_object.cc",
+    "ipcz/driver_memory.cc",
+    "ipcz/driver_memory_mapping.cc",
+    "ipcz/driver_object.cc",
+    "ipcz/driver_transport.cc",
     "ipcz/link_side.cc",
     "ipcz/link_side.h",
     "ipcz/link_type.cc",
@@ -218,9 +226,14 @@ ipcz_source_set("ipcz_tests_sources") {
 
   sources = [
     "api_test.cc",
+    "ipcz/driver_memory_test.cc",
+    "ipcz/driver_object_test.cc",
+    "ipcz/driver_transport_test.cc",
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "reference_drivers/single_process_reference_driver_test.cc",
+    "test/mock_driver.cc",
+    "test/mock_driver.h",
     "test/test_base.cc",
     "test/test_base.h",
     "util/ref_counted_test.cc",
@@ -228,6 +241,7 @@ ipcz_source_set("ipcz_tests_sources") {
   ]
 
   deps = [
+    "//testing/gmock",
     "//testing/gtest",
     "//third_party/abseil-cpp:absl",
   ]
