ipcz: Introduce message macros
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Defines an internal MessageBase structure and macros to generate
subclasses for specific types of messages. These macros allow for
convenience and legibility when defining internal control messages to
manage ipcz internode affairs.

Each message consists of a fixed-size parameter structure which is laid
out by IPCZ_MSG_PARAM* macro invocations within an
IPCZ_MSG_BEGIN/IPCZ_MSG_END block.

Parameters may be simple inlined POD fields, serialized driver objects,
or arrays of either. Arrays are represented by indirection with a 32-bit
offset into the message payload.

Enough support for versioning is in place to tolerate newer, larger
versions of any defined messages, but the reverse (tolerating
older-than-current versions) is not yet implemented since it isn't
needed yet.

This also adds some test-only messages, along with a bunch of tests to
exercise them.

Bug: 1299283
Change-Id: Ie39543a2a5120d9da4a166aea55990cdaf1e6574
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3600687
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#996950}
NOKEYCHECK=True
GitOrigin-RevId: 3e1dac6dde9499fb3588b982c58bd34af9f05491

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -165,6 +165,7 @@ ipcz_source_set("impl") {
     "ipcz/driver_memory_mapping.h",
     "ipcz/driver_object.h",
     "ipcz/driver_transport.h",
+    "ipcz/message_internal.h",
     "ipcz/node.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
@@ -172,6 +173,7 @@ ipcz_source_set("impl") {
     "ipcz/router.h",
     "ipcz/sequence_number.h",
     "ipcz/sequenced_queue.h",
+    "ipcz/test_messages.h",
   ]
   sources = [
     "ipcz/api_object.cc",
@@ -185,6 +187,12 @@ ipcz_source_set("impl") {
     "ipcz/link_type.h",
     "ipcz/local_router_link.cc",
     "ipcz/local_router_link.h",
+    "ipcz/message_internal.cc",
+    "ipcz/message_macros/message_declaration_macros.h",
+    "ipcz/message_macros/message_definition_macros.h",
+    "ipcz/message_macros/message_params_declaration_macros.h",
+    "ipcz/message_macros/message_params_declaration_macros.h",
+    "ipcz/message_macros/undef_message_macros.h",
     "ipcz/node.cc",
     "ipcz/node_name.cc",
     "ipcz/node_name.h",
@@ -193,6 +201,8 @@ ipcz_source_set("impl") {
     "ipcz/portal.cc",
     "ipcz/router.cc",
     "ipcz/router_link.h",
+    "ipcz/test_messages.cc",
+    "ipcz/test_messages_generator.h",
   ]
   public_deps = [
     ":ipcz_header",
@@ -229,6 +239,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/driver_memory_test.cc",
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
+    "ipcz/message_internal_test.cc",
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "reference_drivers/single_process_reference_driver_test.cc",
