ipcz: Basic NodeLink and RemoteRouterLink
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Introduces very basic implementations of NodeLink and RemoteRouterLink
as a foundation for internode connection and remote portal routes.

A single new message is added to convey route closure, and it's tested
end-to-end through a pair of Routers connected by RemoteRouterLinks.

Bug: 1299283
Change-Id: Ib4f4c5455dfdcf707c26520ba859e2c779262620
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3599525
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#998139}
NOKEYCHECK=True
GitOrigin-RevId: fcc664329c5b026d276f2c5340da1475dd497bfe

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -165,14 +165,19 @@ ipcz_source_set("impl") {
     "ipcz/driver_memory_mapping.h",
     "ipcz/driver_object.h",
     "ipcz/driver_transport.h",
+    "ipcz/link_side.h",
+    "ipcz/link_type.h",
     "ipcz/message_internal.h",
     "ipcz/node.h",
+    "ipcz/node_link.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
     "ipcz/portal.h",
+    "ipcz/remote_router_link.h",
     "ipcz/router.h",
     "ipcz/sequence_number.h",
     "ipcz/sequenced_queue.h",
+    "ipcz/sublink_id.h",
     "ipcz/test_messages.h",
   ]
   sources = [
@@ -182,23 +187,27 @@ ipcz_source_set("impl") {
     "ipcz/driver_object.cc",
     "ipcz/driver_transport.cc",
     "ipcz/link_side.cc",
-    "ipcz/link_side.h",
     "ipcz/link_type.cc",
-    "ipcz/link_type.h",
     "ipcz/local_router_link.cc",
     "ipcz/local_router_link.h",
     "ipcz/message_internal.cc",
     "ipcz/message_macros/message_declaration_macros.h",
     "ipcz/message_macros/message_definition_macros.h",
+    "ipcz/message_macros/message_dispatch_macros.h",
     "ipcz/message_macros/message_params_declaration_macros.h",
     "ipcz/message_macros/message_params_declaration_macros.h",
     "ipcz/message_macros/undef_message_macros.h",
     "ipcz/node.cc",
+    "ipcz/node_link.cc",
+    "ipcz/node_messages.cc",
+    "ipcz/node_messages.h",
+    "ipcz/node_messages_generator.h",
     "ipcz/node_name.cc",
     "ipcz/node_name.h",
     "ipcz/parcel.cc",
     "ipcz/parcel_queue.cc",
     "ipcz/portal.cc",
+    "ipcz/remote_router_link.cc",
     "ipcz/router.cc",
     "ipcz/router_link.h",
     "ipcz/test_messages.cc",
@@ -240,6 +249,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
     "ipcz/message_internal_test.cc",
+    "ipcz/node_link_test.cc",
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "reference_drivers/single_process_reference_driver_test.cc",
