ipcz: Trap() API
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Introduces the Trap() API for installing one-shot condition traps on
portals. Does not yet support trapping of conditions which depend on
remote portal queue state, such as IPCZ_TRAP_BELOW_MAX_REMOTE_BYTES
or IPCZ_TRAP_CONSUMED_REMOTE_PARCEL.

Also introduces some new helper methods for ipcz test fixtures to
expose more succinct access to ipcz APIs.

Bug: 1299283
Change-Id: Ia761700770495c214fddf911e8ed4fec4fb2a1b3
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3609057
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/main@{#999943}
NOKEYCHECK=True
GitOrigin-RevId: 04d31f9c47f9eb111f27c3cd3f4a75b8a4ec85f7

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -212,6 +212,10 @@ ipcz_source_set("impl") {
     "ipcz/router_link.h",
     "ipcz/test_messages.cc",
     "ipcz/test_messages_generator.h",
+    "ipcz/trap_event_dispatcher.cc",
+    "ipcz/trap_event_dispatcher.h",
+    "ipcz/trap_set.cc",
+    "ipcz/trap_set.h",
   ]
   public_deps = [
     ":ipcz_header",
@@ -257,6 +261,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "test/mock_driver.h",
     "test/test_base.cc",
     "test/test_base.h",
+    "trap_test.cc",
     "util/ref_counted_test.cc",
     "util/stack_trace_test.cc",
   ]
