ipcz: Implement basic node connection
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Introduces NodeConnector and some associated ipcz messages which will be
used by ConnectNode() to bootstrap new NodeLinks between nodes.

A NodeConnector is a short-lived object which takes initial ownership
of a DriverTransport to transmit and listen for appropriate handshake
messages. Once handshake is complete, the transport is passed on to
a newly created NodeLink and given to whichever Node initiated a
connection on the transport.

This does not actually implement the ConnectNode() API yet. This
CL is primarily about landing the most important NodeConnector
implementations (broker-to-non-broker, and non-broker-to-broker)
and getting test coverage for them.

Bug: 1299283
Change-Id: I389ac8796c36446661fe1d96f63254fc96a95cad
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3621786
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1001227}
NOKEYCHECK=True
GitOrigin-RevId: ef67b80c76e5a9c9ca45b55b2b8e61e7c01a3b7d

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -169,7 +169,9 @@ ipcz_source_set("impl") {
     "ipcz/link_type.h",
     "ipcz/message_internal.h",
     "ipcz/node.h",
+    "ipcz/node_connector.h",
     "ipcz/node_link.h",
+    "ipcz/node_messages.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
     "ipcz/portal.h",
@@ -198,9 +200,9 @@ ipcz_source_set("impl") {
     "ipcz/message_macros/message_params_declaration_macros.h",
     "ipcz/message_macros/undef_message_macros.h",
     "ipcz/node.cc",
+    "ipcz/node_connector.cc",
     "ipcz/node_link.cc",
     "ipcz/node_messages.cc",
-    "ipcz/node_messages.h",
     "ipcz/node_messages_generator.h",
     "ipcz/node_name.cc",
     "ipcz/node_name.h",
@@ -253,6 +255,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
     "ipcz/message_internal_test.cc",
+    "ipcz/node_connector_test.cc",
     "ipcz/node_link_test.cc",
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
@@ -261,6 +264,8 @@ ipcz_source_set("ipcz_tests_sources") {
     "test/mock_driver.h",
     "test/test_base.cc",
     "test/test_base.h",
+    "test/test_transport_listener.cc",
+    "test/test_transport_listener.h",
     "trap_test.cc",
     "util/ref_counted_test.cc",
     "util/stack_trace_test.cc",
