ipcz: Implement ConnectNode() API
Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Implements ConnectNode() support for connections between brokers and
non-brokers.

Also adds support to Router for outbound parcel transmission to retain
parcels in an outbound queue when no outward link is present.

Bug: 1299283
Change-Id: I871704bae0fcfc9754d20322cc41fa92900525ac
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3626220
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Alex Gough <ajgo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1001295}
NOKEYCHECK=True
GitOrigin-RevId: b9b9341f8d49644bfff83c18b8658dd9eaa6e568

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -251,6 +251,7 @@ ipcz_source_set("ipcz_tests_sources") {
 
   sources = [
     "api_test.cc",
+    "connect_test.cc",
     "ipcz/driver_memory_test.cc",
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
@@ -262,6 +263,8 @@ ipcz_source_set("ipcz_tests_sources") {
     "reference_drivers/single_process_reference_driver_test.cc",
     "test/mock_driver.cc",
     "test/mock_driver.h",
+    "test/multinode_test.cc",
+    "test/multinode_test.h",
     "test/test_base.cc",
     "test/test_base.h",
     "test/test_transport_listener.cc",
