ipcz: Introduce BlockAllocator
BlockAllocator manages a region of memory to dynamically allocate and
free blocks of a smaller fixed size within the region.

This only lands the implementation and unit tests for now, but
BlockAllocator will provide the basis for dynamic allocation of shared
memory fragments on each NodeLink.

Split out from the ipcz uber-CL: https://crrev.com/c/3570271

Bug: 1299283
Change-Id: I3a582364eca449e468512f0dfab75a9d9dd4c26f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3630827
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1002879}
NOKEYCHECK=True
GitOrigin-RevId: 2f8141b38df2b59facc6992eeca43469d1b3d234

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -161,6 +161,7 @@ ipcz_source_set("impl") {
   visibility = [ ":*" ]
   public = [
     "ipcz/api_object.h",
+    "ipcz/block_allocator.h",
     "ipcz/driver_memory.h",
     "ipcz/driver_memory_mapping.h",
     "ipcz/driver_object.h",
@@ -184,6 +185,7 @@ ipcz_source_set("impl") {
   ]
   sources = [
     "ipcz/api_object.cc",
+    "ipcz/block_allocator.cc",
     "ipcz/driver_memory.cc",
     "ipcz/driver_memory_mapping.cc",
     "ipcz/driver_object.cc",
@@ -252,6 +254,7 @@ ipcz_source_set("ipcz_tests_sources") {
   sources = [
     "api_test.cc",
     "connect_test.cc",
+    "ipcz/block_allocator_test.cc",
     "ipcz/driver_memory_test.cc",
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
