ipcz: BufferPools and Fragments
Introduces BufferPool, an object which owns an extensible set of
DriverMemoryMapping objects, each identified by a unique BufferId within
the pool. In addition to exposing the mappings themselves, BufferPool
can also register BlockAllocators to help manage its mapped memory.

BufferPool exposes a simple API for dynamic allocation of different
sizes of blocks from across the pool, abstracting away the selection of
a specific buffer or BlockAllocator to use.

Allocated blocks are described by a FragmentDescriptor: a tuple of
(BufferId, offset, size). This is a suitable wire structure to convey
shared memory references across a NodeLink, where both sides will
maintain a BufferPool with the same set of BufferIds and mappings.

A Fragment is a FragmentDescriptor with a cached pointer to the mapped
memory it describes. FragmentDescriptors can be resolved to concrete
Fragments by querying the appropriate BufferPool.

Bug: 1299283
Change-Id: Ifc9c230d9a614f40abc9ad38c9180eef119afeb0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3636566
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Alex Gough <ajgo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1003796}
NOKEYCHECK=True
GitOrigin-RevId: a8964228e68fbcb0d29ff4062dfc1d71c850dee3

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -162,10 +162,13 @@ ipcz_source_set("impl") {
   public = [
     "ipcz/api_object.h",
     "ipcz/block_allocator.h",
+    "ipcz/buffer_pool.h",
     "ipcz/driver_memory.h",
     "ipcz/driver_memory_mapping.h",
     "ipcz/driver_object.h",
     "ipcz/driver_transport.h",
+    "ipcz/fragment.h",
+    "ipcz/fragment_descriptor.h",
     "ipcz/link_side.h",
     "ipcz/link_type.h",
     "ipcz/message_internal.h",
@@ -186,10 +189,16 @@ ipcz_source_set("impl") {
   sources = [
     "ipcz/api_object.cc",
     "ipcz/block_allocator.cc",
+    "ipcz/block_allocator_pool.cc",
+    "ipcz/block_allocator_pool.h",
+    "ipcz/buffer_id.h",
+    "ipcz/buffer_pool.cc",
     "ipcz/driver_memory.cc",
     "ipcz/driver_memory_mapping.cc",
     "ipcz/driver_object.cc",
     "ipcz/driver_transport.cc",
+    "ipcz/fragment.cc",
+    "ipcz/fragment_descriptor.cc",
     "ipcz/link_side.cc",
     "ipcz/link_type.cc",
     "ipcz/local_router_link.cc",
@@ -255,6 +264,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "api_test.cc",
     "connect_test.cc",
     "ipcz/block_allocator_test.cc",
+    "ipcz/buffer_pool_test.cc",
     "ipcz/driver_memory_test.cc",
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
