--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -171,7 +171,7 @@ ipcz_source_set("impl") {
     "ipcz/fragment_descriptor.h",
     "ipcz/link_side.h",
     "ipcz/link_type.h",
-    "ipcz/message_internal.h",
+    "ipcz/message.h",
     "ipcz/node.h",
     "ipcz/node_connector.h",
     "ipcz/node_link.h",
@@ -203,7 +203,7 @@ ipcz_source_set("impl") {
     "ipcz/link_type.cc",
     "ipcz/local_router_link.cc",
     "ipcz/local_router_link.h",
-    "ipcz/message_internal.cc",
+    "ipcz/message.cc",
     "ipcz/message_macros/message_declaration_macros.h",
     "ipcz/message_macros/message_definition_macros.h",
     "ipcz/message_macros/message_dispatch_macros.h",
@@ -268,7 +268,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/driver_memory_test.cc",
     "ipcz/driver_object_test.cc",
     "ipcz/driver_transport_test.cc",
-    "ipcz/message_internal_test.cc",
+    "ipcz/message_test.cc",
     "ipcz/node_connector_test.cc",
     "ipcz/node_link_test.cc",
     "ipcz/parcel_queue_test.cc",
