--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -175,6 +175,7 @@ ipcz_source_set("impl") {
     "ipcz/node.h",
     "ipcz/node_connector.h",
     "ipcz/node_link.h",
+    "ipcz/node_link_memory.h",
     "ipcz/node_messages.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
@@ -215,6 +216,7 @@ ipcz_source_set("impl") {
     "ipcz/node.cc",
     "ipcz/node_connector.cc",
     "ipcz/node_link.cc",
+    "ipcz/node_link_memory.cc",
     "ipcz/node_messages.cc",
     "ipcz/node_messages_generator.h",
     "ipcz/node_name.cc",
