--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -200,6 +200,7 @@ ipcz_source_set("impl") {
     "ipcz/driver_transport.cc",
     "ipcz/fragment.cc",
     "ipcz/fragment_descriptor.cc",
+    "ipcz/handle_type.h",
     "ipcz/link_side.cc",
     "ipcz/link_type.cc",
     "ipcz/local_router_link.cc",
@@ -226,6 +227,8 @@ ipcz_source_set("impl") {
     "ipcz/portal.cc",
     "ipcz/remote_router_link.cc",
     "ipcz/router.cc",
+    "ipcz/router_descriptor.cc",
+    "ipcz/router_descriptor.h",
     "ipcz/router_link.h",
     "ipcz/test_messages.cc",
     "ipcz/test_messages_generator.h",
@@ -278,6 +281,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "ipcz/parcel_queue_test.cc",
     "ipcz/sequenced_queue_test.cc",
     "reference_drivers/single_process_reference_driver_test.cc",
+    "remote_portal_test.cc",
     "test/mock_driver.cc",
     "test/mock_driver.h",
     "test/multinode_test.cc",
